<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Login</string>
    <string name="hello">Hello,</string>
    <string name="action_settings">Settings</string>
    <string name="user_name">UserName:</string>
    <string name="password">PassWord:</string>
    <string name="login">Login</string>
    <string name="quit">Quit</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="introduction">Welcome to My first app!</string>
    <string name="back">Back</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="Sex">性别：</string>
    <string name="register">Register</string>
    <string name="title_activity_forum">ForumActivity</string>
    <string name="title_activity_users_db">UsersDBActivity</string>
    <string name="title_activity_update_udb">UpdateUdbActivity</string>

</resources>
