<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/mainbg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.activity.login.LoginActivity"
    android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/user_name" />
                
             	

            <EditText
                android:id="@+id/UpdatePwd_edit1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/textbg"
                android:textColor="@color/purple"
                android:textColorHint="@color/orchid"
                android:hint="请输入用户名"
               
                android:ems="10" >

                <requestFocus />
            </EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/password" />

            <EditText
                android:id="@+id/UpdatePwd_edit2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/textbg"
                android:hint="请输入密码"
                android:textColor="@color/purple"
                android:textColorHint="@color/orchid"
                android:ems="10"
                android:inputType="textPassword" />
        </LinearLayout>

    <LinearLayout
        android:layout_width="332dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:weightSum="1">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:text="Remember me"
            android:id="@+id/RemMeChb"
            android:checked="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_gravity="right|center"
            android:text="Forget password?"
            android:id="@+id/FgPwdTextView" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_weight="0.03">

        <Button
            android:id="@+id/buttonlogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:background="@drawable/buttonbg"
            android:text="@string/login"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/buttonreg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:background="@drawable/buttonbg"
            android:text="@string/register"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/buttonquit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:background="@drawable/buttonbg"
            android:text="@string/quit"
            android:textColor="@color/white" />

    </LinearLayout>


</LinearLayout>
