<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/GridLayout1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:columnCount="4"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:rowCount="15"
    tools:context="com.activity.register.RegisterActivity" >

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="start"
        android:layout_row="0"
        android:text="@string/user_name" />

    <TextView
        android:id="@+id/password"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="start"
        android:layout_row="1"
        android:text="@string/password" />

    <EditText
        android:id="@+id/regusername"
        android:layout_width="180dp"
        android:layout_column="2"
        android:layout_columnSpan="2"
        android:layout_gravity="start"
        android:layout_row="0"
        android:ems="10"
        android:hint="请输入用户名"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/regpassword"
        android:layout_width="180dp"
        android:layout_column="2"
        android:layout_columnSpan="2"
        android:layout_gravity="start"
        android:layout_row="1"
        android:ems="10"
        android:hint="请输入密码"
        android:inputType="textPassword" >
    </EditText>

    <TextView
        android:id="@+id/sex"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="start"
        android:layout_row="2"
        android:text="@string/Sex" />
    
     <RadioGroup
        android:id="@+id/radioGroupSex"
        android:layout_column="2"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_row="2" >

        <RadioButton
        android:id="@+id/radioMale"
        android:layout_column="2"
        android:layout_gravity="start"
        android:layout_row="2"
        android:text="男"
        android:checked="true" />

        <RadioButton
        android:id="@+id/radioFemale"
        android:layout_column="3"
        android:layout_gravity="start"
        android:layout_row="2"
        android:text="女"
        android:checked="false" />
    </RadioGroup>

    <TextView
        android:id="@+id/textViewhobby"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="start"
        android:layout_row="4"
        android:text="爱好：" />

    <CheckBox
        android:id="@+id/checkBoxSport"
        android:layout_column="2"
        android:layout_gravity="start"
        android:layout_row="4"
        android:text="运动" />

    <CheckBox
        android:id="@+id/checkBoxPhoto"
        android:layout_column="3"
        android:layout_gravity="start"
        android:layout_row="4"
        android:text="摄影" />

    <CheckBox
        android:id="@+id/checkBoxRead"
        android:layout_column="2"
        android:layout_gravity="start"
        android:layout_row="5"
        android:text="阅读" />

    <CheckBox
        android:id="@+id/checkBoxDraw"
        android:layout_column="3"
        android:layout_gravity="start"
        android:layout_row="5"
        android:text="绘画" />

    <TextView
        android:id="@+id/textVieweEdu"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="start"
        android:layout_row="6"
        android:text="学历：" />

    <Spinner
        android:id="@+id/spinnerEducation"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_column="2"
        android:layout_gravity="center"
        android:layout_row="6" />
    
     <TextView
       android:id="@+id/textView"
       android:layout_column="0"
      android:layout_columnSpan="2"
       android:layout_gravity="start"
       android:layout_row="7"
       android:text="毕业院校：" />
     
     <Spinner
        android:id="@+id/spinnerschool"
        android:layout_column="2"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:entries="@array/graduateSchool"
        android:layout_row="7" />
     
	 <TextView
       android:id="@+id/textViewSpecialty"
       android:layout_column="0"
       android:layout_columnSpan="2"
       android:layout_gravity="start"
       android:layout_row="9"
       android:text="专业：" />
     
     <Spinner
        android:id="@+id/spinnerSpecialty"
        android:layout_column="2"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:entries="@array/speciality"
        android:layout_row="9" />
     
    <Button
        android:id="@+id/buttonregYes"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="3"
        android:layout_row="12"
        android:layout_gravity="center_horizontal|top"
        android:background="@drawable/buttonbg"
        android:textColor="@color/white"
        android:text="Yes"/>

    
</GridLayout>